<resources>
    <string name="app_name">DemoApp</string>
    <string name="dialog_title">自定义dialog</string>
    <string name="dialog_text">我就是我,不一样的烟火!!</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="test">test</string>
    <string name="result">result:</string>
    <string name="search">Search</string>
    <string name="setting">setting</string>
    <string name="delete">delete</string>
    <string name="test_string">MY GHL PayhereMid---!@#$%^*(){}:"?,.;'[]\~`MY GHL PayhereMid---!@#$%^*(){}:"?,.;'[]\~`MY GHL PayhereMid---!@#$%^*(){}:"?,.;'[]\~`</string>
    <string name="show_img">show img</string>
    <string name="test_str">winner</string>
    <string name="do_by_xml">Do by Xml</string>
    <string name="do_by_code">Do by Code</string>
    <string name="do_by_custom">Do by Custom</string>
    <string name="view_property_animator">ViewPropertyAnimator</string>
    <string name="layout_animator_hide_show">LayoutAnimator(hide/show)</string>
    <string name="property_anim">Property Anim</string>
    <string name="please_input_city_name">please input city name</string>
    <string name="default_city">深圳</string>
    <string name="get">Get</string>
    <string name="post">Post</string>

    <item name="statusbarutil_fake_status_bar_view" type="id" />
    <item name="statusbarutil_translucent_view" type="id" />
</resources>
