<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pax.demoapp.ui.activity.TestNetActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/green"
        android:indeterminateTintMode="src_atop"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_city_name"
            android:text="@string/default_city" />

        <Button
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/request_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/green" />
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</FrameLayout>
